# distin

./: .gitignore  AUDIT_SCOPE.md  OUTREACH.md  README.md  manifesto.md
.github/workflows/: ci.yml
docs/: api-reference.mdx  architecture.mdx  economics.mdx  errors.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  integration.mdx
engine/: .gitignore  AUDIT.md  Anchor.toml  Cargo.toml  SECURITY.md  deploy.sh
engine/coordinator/: Cargo.toml  README.md  m7-demo.sh
engine/coordinator/src/: eth_demo.rs  main.rs  net_demo.rs  signerd.rs
engine/kobe/: Cargo.toml
engine/kobe-ecdsa/: README.md  btc.go  go.mod  go.sum
engine/kobe-ecdsa/cmd/btc-send/: main.go
engine/kobe-ecdsa/cmd/gen-operators/: main.go
engine/kobe-ecdsa/cmd/operator/: main.go
engine/kobe-ecdsa/net/: demo.sh  network.go  operator.go  protocol.go  share.go  transport.go
engine/kobe/src/: lib.rs
engine/programs/distin/src/: errors.rs  lib.rs  state.rs
marketing/: campaign.md  launch_copy.md  tweets.md
product/scripts/: bootstrap.devnet.mjs  bootstrap.mjs  devnet.json
product/web/: next.config.ts
product/web/.claude/: launch.json
product/web/app/: distin.ts  page.tsx
web/: LIGHTHOUSE.md  next.config.ts  package-lock.json  package.json
web/.claude/: launch.json
web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
web/app/app/: distin.ts  page.tsx
web/app/docs/: content.ts  page.tsx
