# kobe — off-chain threshold signer for Distin.
#
# This is a STANDALONE host crate, deliberately NOT a member of the engine
# workspace (engine/Cargo.toml). The on-chain `distin` program builds for the
# Solana SBF target with a pinned 0.31-era / solana-1.18 toolchain; kobe builds
# only for the host and pulls modern crypto deps (frost-ed25519, dalek). Keeping
# it separate means kobe's dependency tree can never perturb the SBF program
# build, and the SBF build never tries to compile kobe.
#
# Milestone 1 scope: 2-of-3 FROST Ed25519 keygen -> threshold sign -> verify.
# The aggregate it produces is a standard Ed25519 signature, which is exactly
# what the on-chain `aggregate_and_emit` group-combine point (lib.rs:524) will
# emit for SVM/Cosmos requests once wired (a later milestone).

# Empty [workspace] table => kobe is its own workspace root, explicitly NOT a
# member of engine/Cargo.toml. Guarantees the SBF program build never pulls it in.
[workspace]

[package]
name = "kobe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Distin off-chain MPC threshold signer (FROST Ed25519 for SVM/Cosmos)."
publish = false

[dependencies]
# ZF (Zcash Foundation) frost-ed25519 — audited reference FROST implementation.
frost-ed25519 = "3.0"
rand = "0.8"

[dev-dependencies]
# Independent, standard Ed25519 verifier used to double-check the aggregate is a
# real RFC 8032 signature, not just "valid under the FROST verify path".
ed25519-dalek = "2.1"

[[example]]
name = "frost_demo"
path = "examples/frost_demo.rs"
